전체 ui색 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,7 +29,7 @@
   <div class="border-dark">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 h-50" style="	background-image: url(&quot;/images/bungae_main.png&quot;);	background-position: center center;	background-size: 50%;	background-repeat: no-repeat;	height: 460px;">
+        <div class="col-md-12 h-50" style="	height: 460px;	background-image: url(&quot;/images/bungae_main.jpg&quot;);	background-position: center;	background-size: 40%;	background-repeat: no-repeat;" >
           <div class="row mt-5">
             <div class="col-md-12 mt-5" style="	height: 46px;	width: 684px;">
               <h2 class="text-center">원하는 번개 모임을 찾아보세요.</h2>
@@ -110,15 +110,7 @@
             <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
           </ul>
-          <div class="row">
-            <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"> <a href="#">
-                <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-              </a> </div>
-          </div>
+
         </div>
       </div>
       <div class="row">
