--- a/src/main/resources/templates/bungae_create.html
+++ b/src/main/resources/templates/bungae_create.html
@@ -71,7 +71,7 @@
                         <label>번개 위치</label>
                         <input type="text" id="keyword" name="bungaeLoc" placeholder="키워드를 입력하세요" required
                                class="form-control">
-                        <input type="hidden" id="address">
+                        <input type="hidden" id="address" name="bungaeAdd">
                         <ul id="placesList"></ul>
                     </div>
                     <div class="form-group">
@@ -111,16 +111,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 </ul>
-                <div class="row">
-                    <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2">
-                        <a href="#">
-                            <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-                        </a> <a href="#">
-                        <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-                    </a> <a href="#">
-                        <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-                    </a></div>
-                </div>
+
             </div>
         </div>
         <div class="row">
