--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" th:href="@{/css/profile.css}">
+  <link rel="stylesheet" th:href="@{/css/my_review.css}">
   <script th:src="@{/js/profile.js}" type="text/javascript"></script>
   <script th:src="@{/js/chat.js}" type="text/javascript"></script>
 
@@ -41,11 +42,32 @@
       <p id="userInfo" class="text-center align-items-center">자기소개란</p>
     </div>
     <button th:onclick="|location.href='@{profile_edit}'|" class="btn btn-primary mx-3" type="button">프로필 수정</button><br>
-    <button th:onclick="|location.href='@{chatting}'|"class="btn btn-primary mx-3" type="button">채팅방 입장</button><br>
-    <button th:onclick="|location.href='@{chat/example}'|" class="btn btn-primary mx-3" type="button">후기 관리</button><br>
-
+    <button id="myReview" class="btn btn-primary mx-3" type="button">후기 관리</button><br>
     <button class="btn btn-primary mx-3" type="button">블랙리스트 관리</button><br>
   </div>
+
+<!-- 내가 받은 후기 보여주기(페이징 처리) -->
+  <div class="modal" id="myreviewModal" tabindex="-1" role="dialog" style="overflow-y: scroll;">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">🧾 내가 받은 리뷰</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- 사용자 정보를 동적으로 추가할 컨테이너 -->
+          <div id="usersContainer"></div>
+          <div id="pagination" class="pagination-container"></div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
   <div class="py-3 border-top border-dark">
     <div class="container">
       <div class="row">
@@ -78,6 +100,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script th:src="@{/js/my_review.js}" type="text/javascript"></script>
 </body>
 
 </html>
