Feat: 모임 참가, 모임 종료
시작시간 1시간 지나면 모임상태 ENDED로 바꿔서 종료 처리
기타 등등

--- a/src/main/resources/templates/bungae_create.html
+++ b/src/main/resources/templates/bungae_create.html
@@ -75,12 +75,12 @@
                         <input type="hidden" id="address" name="address">
                         <ul id="placesList"></ul>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group age">
                         <label>연령대</label>
                         <input type="number" name="bungaeMinAge" id="bungaeMinAge" min="0" required
-                               class="form-control"> ~
+                               class="form-control age"> ~
                         <input type="number" name="bungaeMaxAge" id="bungaeMaxAge" min="0" required
-                               class="form-control">
+                               class="form-control age">
                     </div>
                     <div class="form-group">
                         <label for="bungaeMaxMember">최대 인원 수</label>
