feat:번개모임 정보를 지도로 연동 및 마커 표시

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -11,7 +11,7 @@
 
 <body>
 <nav class="navbar navbar-dark bg-primary">
-  <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></a> </div>
+  <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="main"><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></a> </div>
 </nav>
 <div class="py-5 text-center">
   <div class="container">
