--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" th:href="@{/css/login_modal.css}">
   <link rel="stylesheet" th:href="@{/css/login.css}">
-  <script th:src="@{/js/login.js}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -25,6 +25,8 @@
       </div>
     </div>
   </nav>
+
+
   <div class="py-5 text-center border-dark" style="">
     <div class="container">
       <div class="row">
@@ -38,17 +40,52 @@
             <div class="form-group mb-3">
               <input id="passwd" name="passwd" type="password" class="form-control" placeholder="Password" required>
               <small class="form-text text-muted text-right">
-                <a href="#">아이디 찾기</a>
+                <a href="#" data-toggle="modal" data-target="#findUserIdModal">아이디 찾기</a>
               </small>
             </div>
             <button id="log_btn" type="submit" class="btn btn-primary mr-3">로그인</button>
             <button id="signup_btn" th:onclick="|location.href='@{join}'|" class="btn btn-primary ml-3">회원가입</button>
           </form>
-
         </div>
       </div>
     </div>
   </div>
+
+
+  <!-- 아이디 찾기 모달 추가 -->
+  <div class="modal" id="findUserIdModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"> 📮 아이디 찾기 </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form name="find-id" id="findIdForm" onsubmit="sendFindIdRequest(); return false;" method="POST">
+          <div class="form-group">
+              <label for="userName">이름</label>
+              <input type="text" class="form-control" id="userName" required>
+            </div>
+            <div class="form-group">
+              <label for="userBirth">생년월일</label>
+              <input type="text" class="form-control" id="userBirth" placeholder="YYYYMMDD" required>
+            </div>
+            <div class="form-group">
+              <label for="userEmail">이메일</label>
+              <input type="text" class="form-control" id="userEmail" required>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button id="findId_btn" type="submit" class="btn btn-primary" form="findIdForm">아이디 찾기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="py-3 border-top border-dark">
     <div class="container">
       <div class="row">
@@ -73,6 +110,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script th:src="@{/js/login.js}" type="text/javascript"></script>
 </body>
 
 </html>
