프론트ui수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -37,8 +37,7 @@
 <div class="border-dark">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 h-50"
-                 style="	background-image: url(&quot;/images/bungae_main.png&quot;);	background-position: center center;	background-size: 50%;	background-repeat: no-repeat;	height: 460px;">
+            <div class="col-md-12 h-50" style="	height: 460px;	background-image: url(/images/bungae_main.jpg);	background-position: center;	background-size: 40%;	background-repeat: no-repeat;" >
                 <div class="row mt-5">
                     <div class="col-md-12 mt-5" style="	height: 46px;	width: 684px;">
                         <h2 class="text-center">원하는 번개 모임을 찾아보세요.</h2>
@@ -62,10 +61,10 @@
         </div>
     </div>
 </div>
-<div class="py-5 border-bottom border-dark">
+<div class="py-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 border border-dark">
+            <div class="col-md-6">
                 <h2 class=""><i class="fa fa-fw fa-plus"></i>신규 등록 번개</h2>
                 <div class="row">
                     <div class="col-md-12">
@@ -75,10 +74,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 border-dark border border-left-0">
-                <div class="col-md-12">
+            <div class="col-md-6">
                     <h2 class=""><i class="fa fa-fw fa-clock-o"></i>마감 임박 번개</h2>
-                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="list-group" id="deadline-list">
@@ -102,16 +99,6 @@
                     <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 </ul>
-                <div class="row">
-                    <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2">
-                        <a href="#">
-                            <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-                        </a> <a href="#">
-                        <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-                    </a> <a href="#">
-                        <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-                    </a></div>
-                </div>
             </div>
         </div>
         <div class="row">
