--- a/src/main/resources/static/css/bungae_detail.css
+++ b/src/main/resources/static/css/bungae_detail.css
@@ -1078,19 +1078,19 @@ pre {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b8ffdb; }
+  background-color: #ffe7e0; }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #7affbd; }
+  border-color: #ffd3c6; }
 
 .table-hover .table-primary:hover {
-  background-color: #9fffce; }
+  background-color: #ffd3c7; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
-    background-color: #9fffce; }
+    background-color: #ffd3c7; }
 
 .table-secondary,
 .table-secondary > th,
@@ -1315,9 +1315,9 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #80ffc0;
+    border-color: white;
     outline: 0;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
   .form-control::-webkit-input-placeholder {
     color: #6c757d;
     opacity: 1; }
@@ -1704,14 +1704,14 @@ textarea.form-control {
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65;
     box-shadow: none; }
   .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
     .btn:not(:disabled):not(.disabled):active:focus, .btn:not(:disabled):not(.disabled).active:focus {
-      box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.25), inset 0 3px 5px rgba(0, 0, 0, 0.125); }
+      box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.25), inset 0 3px 5px rgba(0, 0, 0, 0.125); }
 
 a.btn.disabled,
 fieldset:disabled a.btn {
@@ -1723,23 +1723,23 @@ fieldset:disabled a.btn {
   border-color: #FFAB91;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-primary:hover {
-    color: #fff;
-    background-color: #00d96d;
-    border-color: #00cc66; }
+    color: #212529;
+    background-color: #ff8e6b;
+    border-color: #ff845e; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(5, 222, 115, 0.5); }
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(222, 151, 129, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #212529;
     background-color: #FFAB91;
     border-color: #FFAB91; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #00cc66;
-    border-color: #00bf60; }
+    color: #212529;
+    background-color: #ff845e;
+    border-color: #ff7a51; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(5, 222, 115, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(222, 151, 129, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -1917,7 +1917,7 @@ fieldset:disabled a.btn {
     background-color: #FFAB91;
     border-color: #FFAB91; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
     color: #FFAB91;
     background-color: transparent; }
@@ -1928,7 +1928,7 @@ fieldset:disabled a.btn {
     border-color: #FFAB91; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(0, 255, 128, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(255, 171, 145, 0.5); }
 
 .btn-outline-secondary {
   color: #4f70ce;
@@ -2597,13 +2597,13 @@ input[type="button"].btn-block {
     background-color: #FFAB91;
     box-shadow: none; }
   .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-    border-color: #80ffc0; }
+    border-color: white; }
   .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
     color: #fff;
-    background-color: #b3ffd9;
-    border-color: #b3ffd9;
+    background-color: white;
+    border-color: white;
     box-shadow: none; }
   .custom-control-input:disabled ~ .custom-control-label {
     color: #6c757d; }
@@ -2651,10 +2651,10 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 255, 128, 0.5); }
+  background-color: rgba(255, 171, 145, 0.5); }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(0, 255, 128, 0.5); }
+  background-color: rgba(255, 171, 145, 0.5); }
 
 .custom-radio .custom-control-label::before {
   border-radius: 50%; }
@@ -2663,7 +2663,7 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"); }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 255, 128, 0.5); }
+  background-color: rgba(255, 171, 145, 0.5); }
 
 .custom-switch {
   padding-left: 2.25rem; }
@@ -2690,7 +2690,7 @@ input[type="button"].btn-block {
     -webkit-transform: translateX(0.75rem);
             transform: translateX(0.75rem); }
   .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-    background-color: rgba(0, 255, 128, 0.5); }
+    background-color: rgba(255, 171, 145, 0.5); }
 
 .custom-select {
   display: inline-block;
@@ -2711,9 +2711,9 @@ input[type="button"].btn-block {
      -moz-appearance: none;
           appearance: none; }
   .custom-select:focus {
-    border-color: #80ffc0;
+    border-color: white;
     outline: 0;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
     .custom-select:focus::-ms-value {
       color: #495057;
       background-color: #fff; }
@@ -2756,8 +2756,8 @@ input[type="button"].btn-block {
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
-    border-color: #80ffc0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    border-color: white;
+    box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
   .custom-file-input:disabled ~ .custom-file-label {
     background-color: #e9ecef; }
   .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -2807,11 +2807,11 @@ input[type="button"].btn-block {
   .custom-range:focus {
     outline: none; }
     .custom-range:focus::-webkit-slider-thumb {
-      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
     .custom-range:focus::-moz-range-thumb {
-      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
     .custom-range:focus::-ms-thumb {
-      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+      box-shadow: 0 0 0 1px white, 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
   .custom-range::-moz-focus-outer {
     border: 0; }
   .custom-range::-webkit-slider-thumb {
@@ -2829,7 +2829,7 @@ input[type="button"].btn-block {
       .custom-range::-webkit-slider-thumb {
         transition: none; } }
     .custom-range::-webkit-slider-thumb:active {
-      background-color: #b3ffd9; }
+      background-color: white; }
   .custom-range::-webkit-slider-runnable-track {
     width: 100%;
     height: 0.5rem;
@@ -2853,7 +2853,7 @@ input[type="button"].btn-block {
       .custom-range::-moz-range-thumb {
         transition: none; } }
     .custom-range::-moz-range-thumb:active {
-      background-color: #b3ffd9; }
+      background-color: white; }
   .custom-range::-moz-range-track {
     width: 100%;
     height: 0.5rem;
@@ -2879,7 +2879,7 @@ input[type="button"].btn-block {
       .custom-range::-ms-thumb {
         transition: none; } }
     .custom-range::-ms-thumb:active {
-      background-color: #b3ffd9; }
+      background-color: white; }
   .custom-range::-ms-track {
     width: 100%;
     height: 0.5rem;
@@ -3461,7 +3461,7 @@ input[type="button"].btn-block {
   .page-link:focus {
     z-index: 2;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.25); }
 
 .page-item:first-child .page-link {
   margin-left: 0;
@@ -3544,10 +3544,10 @@ input[type="button"].btn-block {
   background-color: #FFAB91; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #212529;
-    background-color: #00cc66; }
+    background-color: #ff845e; }
   a.badge-primary:focus, a.badge-primary.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(255, 171, 145, 0.5); }
 
 .badge-secondary {
   color: #fff;
@@ -3656,13 +3656,13 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #008543;
-  background-color: #ccffe6;
-  border-color: #b8ffdb; }
+  color: #85594b;
+  background-color: #ffeee9;
+  border-color: #ffe7e0; }
   .alert-primary hr {
-    border-top-color: #9fffce; }
+    border-top-color: #ffd3c7; }
   .alert-primary .alert-link {
-    color: #005229; }
+    color: #644339; }
 
 .alert-secondary {
   color: #293a6b;
@@ -3917,15 +3917,15 @@ input[type="button"].btn-block {
   border-bottom: 0; }
 
 .list-group-item-primary {
-  color: #008543;
-  background-color: #b8ffdb; }
+  color: #85594b;
+  background-color: #ffe7e0; }
   .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-    color: #008543;
-    background-color: #9fffce; }
+    color: #85594b;
+    background-color: #ffd3c7; }
   .list-group-item-primary.list-group-item-action.active {
     color: #fff;
-    background-color: #008543;
-    border-color: #008543; }
+    background-color: #85594b;
+    border-color: #85594b; }
 
 .list-group-item-secondary {
   color: #293a6b;
@@ -4661,7 +4661,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #00cc66 !important; }
+  background-color: #ff845e !important; }
 
 .bg-secondary {
   background-color: #4f70ce !important; }
@@ -6987,7 +6987,7 @@ button.bg-dark:focus {
   color: #FFAB91 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #00b35a !important; }
+  color: #ff7145 !important; }
 
 .text-secondary {
   color: #4f70ce !important; }
