--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -29,11 +29,22 @@
     </div>
   </nav>
 
-  <div class="py-3">
-    <div class="container">
+  <div class="pt-3">
+    <div class="container" style="	width: 600px;">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="text-center mb-3">번개 채팅</h1>
+        <div class="col-md-12" style="">
+          <table class="table">
+            <tbody>
+            <tr>
+              <td>주최자</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td >참가자</td>
+              <td></td>
+            </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -41,14 +52,14 @@
 
   <div class="container">
     <div class="row justify-content-center mb-3">
-      <div class="col-md-8">
-        <div id="messageList" class="border border-dark" style="height: 400px; overflow-y: scroll;">
+      <div class="col-md-8 d-flex justify-content-center">
+        <div id="messageList" class="border rounded shadow border-light" style="	height: 400px;	overflow-y: scroll;	width: 580px;" >
           <!-- 메시지가 여기에 동적으로 추가됩니다 -->
         </div>
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-8">
+      <div class="col-md-8 my-3">
         <form onsubmit="sendMessage(event)" class="form-inline justify-content-center">
           <input type="text" id="message" autocomplete="off" class="form-control form-control-lg mr-2" placeholder="내용을 입력하세요." style="flex-grow: 1;">
           <button class="btn btn-primary" type="submit">전송</button>
