--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,10 +25,10 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center border-dark" style="">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto col-md-6 col-10 bg-white p-5">
+  <div class="py-5 text-center" style="">
+    <div class="login-container d-flex justify-content-center" style="">
+      <div class="row d-flex justify-content-center align-items-center border rounded shadow border-light" style="	width: 400px;	height: 300px;">
+        <div class="col-10 bg-white text-center col-md-12">
           <h1 class="mb-4">로그인</h1>
 
           <form name="login" id="login" onsubmit="sendLoginRequest(); return false;" method="POST">
