Feat: 채팅 기능 연결, 아이디 찾기, 채팅방 속 주최자/참여자 불러오기 구현
 - BungaeMemberController, BungaeMemberRepository, BungaeMemberServiceImpl : 참여자인지, 주최자인지, 새로운 참여자인지 구분하는 로직 추가

 - bungae_detail.js : 조건에 맞으면 채팅창으로 넘어가게

--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -34,11 +34,11 @@
           <table class="table">
             <tbody>
             <tr>
-              <td>주최자</td>
+              <td id="organizer">주최자</td>
               <td></td>
             </tr>
             <tr>
-              <td >참가자</td>
+              <td id="member">참가자</td>
               <td></td>
             </tr>
             </tbody>
