--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -37,10 +37,16 @@
 <div class="border-dark">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 h-50" style="	height: 460px;	background-image: url(/images/bungae_main.jpg);	background-position: center;	background-size: 40%;	background-repeat: no-repeat;" >
+            <div class="col-md-12 h-50"
+                 style="height: 460px;	background-image: url(/images/bungae_main.jpg);	background-position: center;	background-size: 40%;	background-repeat: no-repeat;">
                 <div class="row mt-5">
-                    <div class="col-md-12 mt-5" style="	height: 46px;	width: 684px;">
-                        <h2 class="text-center">원하는 번개 모임을 찾아보세요.</h2>
+                    <div class="col-md-12 mt-5" style="	height: 46px; width: 684px; text-align: center">
+                        <h2 class="text-center"
+                            style="display: inline-block; background-color: rgba(255 ,171 , 145, 0.8); color: white">
+                            원하는
+                            번개
+                            모임을
+                            찾아보세요</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -75,7 +81,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                    <h2 class=""><i class="fa fa-fw fa-clock-o"></i>마감 임박 번개</h2>
+                <h2 class=""><i class="fa fa-fw fa-clock-o"></i>마감 임박 번개</h2>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="list-group" id="deadline-list">
