Feat: 채팅 내 주최자, 참가자 가로 + 동적으로 추가되게
- BungaeMemberController :
BungaeMember bungaeMember = bungaeMemberService.joinBungae(bungaeId, userId); -> bungaeMemberService.joinBungae(bungaeId, userId); 변경
- profile.js, editProfile.js : localStorage에서 sessionStorage에서 받아오게 변경
- chat.js : 항상 스크롤 제일 아래로 오게, 멤버 입장시 새로고침 없이도 상단에 멤버 추가

--- a/src/main/resources/static/css/chatting_css.css
+++ b/src/main/resources/static/css/chatting_css.css
@@ -80,6 +80,14 @@
     max-width: 80%;
 }
 
+#organizer, #member {
+    display: flex;
+    flex-wrap: wrap; /* 요소들이 너무 많아지면 다음 줄로 넘어갑니다 */
+    align-items: center; /* 세로 중앙 정렬 */
+    gap: 10px; /* 요소들 사이의 간격을 10px로 설정 */
+}
+
+
 
 .modal {
     display: none;
