Fix: 현재 인원 표시, 참여중인 번개 수정, 참여 나이 제한
번개 현재 참여중인 인원 보여주기, 종료된 모임을 참여중인 번개로 인식해서 오류 생기던거 수정, 연령대 제한 코드 잘못 짠거 수정

--- a/src/main/resources/templates/bungae_detail.html
+++ b/src/main/resources/templates/bungae_detail.html
@@ -70,8 +70,8 @@
                             <td th:text="${bungae.bungaeDescription}">(내용)</td>
                         </tr>
                         <tr>
-                            <td>최대 인원</td>
-                            <td th:text="${bungae.bungaeMaxMember}">(내용)</td>
+                            <td>현재 인원</td>
+                            <td th:text="${currentMemberCount} + ' / ' + ${bungae.bungaeMaxMember}">(내용)</td>
                         </tr>
                         <tr>
                             <td>연령대</td>
