--- a/src/main/resources/templates/bungae_ing.html
+++ b/src/main/resources/templates/bungae_ing.html
@@ -46,7 +46,8 @@
         <div class="row d-flex justify-content-center">
             <div class="col-md-8" style="">
                 <div class="list-group" style="">
-                    <a th:if="${bungae != null}" th:href="@{|/chat/${bungae.bungaeId}|}" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <a th:if="${bungae != null}" th:href="@{|/chat/${bungae.bungaeId}|}"
+                       class="list-group-item list-group-item-action flex-column align-items-start">
                         <div class="row">
                             <div class="col-md-4"><img class="d-block img-fluid"
                                                        src="https://static.pingendo.com/img-placeholder-1.svg"></div>
@@ -57,7 +58,9 @@
                                 <p class="text-left" th:text="${bungae.bungaeStartTime}">일시</p>
                                 <p class="text-left" th:text="${bungae.bungaeLocation.keyword}">장소</p>
                                 <p class="text-left" th:text="${bungae.bungaeLocation.address}">상세장소</p>
-                                <p class="text-left" th:text="${bungae.bungaeMaxMember}">인원</p>
+                                <p class="text-left"
+                                   th:text="'현재 인원: ' + ${currentMemberCount} + ' / ' + ${bungae.bungaeMaxMember}">
+                                    인원</p>
                             </div>
                         </div>
                     </a>
@@ -68,19 +71,21 @@
 </div>
 <div class="py-3 border-top border-dark">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></div>
-        <div class="col-md-6 text-center d-md-flex align-items-center">
-          <ul class="nav mx-md-auto d-flex justify-content-center">
-            <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          </ul>
-        </div>
         <div class="row">
-            <div class="col-md-12 text-center">
-                <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
+            <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30"
+                                                class="d-inline-block align-top" alt=""></div>
+            <div class="col-md-6 text-center d-md-flex align-items-center">
+                <ul class="nav mx-md-auto d-flex justify-content-center">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
+                </div>
             </div>
         </div>
     </div>
