프론트ui수정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,10 +27,10 @@
   </nav>
 
 
-  <div class="py-5 text-center border-dark" style="">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto col-md-6 col-10 bg-white p-5">
+  <div class="py-5 text-center" style="">
+    <div class="login-container d-flex justify-content-center" style="">
+      <div class="row d-flex justify-content-center align-items-center border rounded shadow border-light" style="	width: 400px;	height: 300px;" >
+        <div class="col-10 bg-white text-center col-md-12">
           <h1 class="mb-4">로그인</h1>
 
           <form name="login" id="login" onsubmit="sendLoginRequest(); return false;" method="POST">
@@ -92,20 +92,9 @@
         <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></div>
         <div class="col-md-6 text-center d-md-flex align-items-center">
           <ul class="nav mx-md-auto d-flex justify-content-center">
-            <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
+            <li class="nav-item"><a class="nav-link" href="https://github.com/SNGYNGJIN/bungae.git"><img class="github_icon" src="/images/github_icon.png">GitHub</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.notion.so/About-Our-Project-e8a8dd04be0c43ac879fb59ab4beb4f0?pvs=4"><img class="notion_icon" src="/images/notion_icon.png">Notion</a></li>
           </ul>
-          <div class="row">
-            <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"> <a href="#">
-                <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-              </a> </div>
-          </div>
         </div>
       </div>
       <div class="row">
