--- a/src/main/resources/static/css/bungae_create.css
+++ b/src/main/resources/static/css/bungae_create.css
@@ -7166,3 +7166,25 @@ a.text-dark:hover, a.text-dark:focus {
   .form-group.age label {
       margin-right: 10px;
   }
+
+@font-face {
+      font-family: 'BMDOHYEON';
+      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+  }
+
+* {
+	font-family: 'BMDOHYEON';
+}
+h1, h2, h3{
+font-family: 'BMDOHYEON';
+}
+.github_icon{
+    width:25px;
+    height:25px;
+}
+.notion_icon{
+    width:25px;
+    height:25px;
+}
