--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -7123,3 +7123,29 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+input[type="password"] {
+        font-family: Arial, sans-serif; /* 기본 폰트로 설정 */
+
+    }
+@font-face {
+      font-family: 'BMDOHYEON';
+      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+  }
+
+* {
+	font-family: 'BMDOHYEON';
+}
+h1, h2, h3{
+font-family: 'BMDOHYEON';
+}
+.github_icon{
+    width:25px;
+    height:25px;
+}
+.notion_icon{
+    width:25px;
+    height:25px;
+}
