--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -7124,9 +7124,33 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
     input[type="text"], input[type="password"] {
+        font-family: Arial, sans-serif;
       padding: 10px;
       margin-bottom: 10px; /* 아래 간격 추가 */
       border: 1px solid #ccc;
       border-radius: 5px;
       width: 100%; /* 너비를 100%로 설정하여 상위 컨테이너에 맞춤 */
   }
+
+
+@font-face {
+      font-family: 'BMDOHYEON';
+      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+  }
+
+* {
+	font-family: 'BMDOHYEON';
+}
+h1, h2, h3{
+font-family: 'BMDOHYEON';
+}
+.github_icon{
+    width:25px;
+    height:25px;
+}
+.notion_icon{
+    width:25px;
+    height:25px;
+}
