--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -52,14 +52,14 @@
 
 <div class="container">
   <div class="row justify-content-center mb-3">
-    <div class="col-md-8">
-      <div id="messageList" class="border border-dark" style="height: 500px; overflow-y: scroll;">
+    <div class="col-md-8 d-flex justify-content-center">
+      <div id="messageList" class="border rounded shadow border-light" style="	height: 400px;	overflow-y: scroll;	width: 580px;" >
         <!-- 메시지가 여기에 동적으로 추가됩니다 -->
       </div>
     </div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-md-8 my-3">
       <form onsubmit="return sendMessage()" class="form-inline justify-content-center">
         <input type="text" id="message" autocomplete="off" class="form-control form-control-lg mr-2" placeholder="내용을 입력하세요." style="flex-grow: 1;">
         <button class="btn btn-primary" type="submit">전송</button>
@@ -90,20 +90,9 @@
       <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></div>
       <div class="col-md-6 text-center d-md-flex align-items-center">
         <ul class="nav mx-md-auto d-flex justify-content-center">
-          <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
+          <li class="nav-item"><a class="nav-link" href="https://github.com/SNGYNGJIN/bungae.git"><img class="github_icon" src="/images/github_icon.png">GitHub</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.notion.so/About-Our-Project-e8a8dd04be0c43ac879fb59ab4beb4f0?pvs=4"><img class="notion_icon" src="/images/notion_icon.png">Notion</a></li>
         </ul>
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"> <a href="#">
-            <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-          </a> <a href="#">
-            <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-          </a> <a href="#">
-            <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-          </a> </div>
-        </div>
       </div>
     </div>
     <div class="row">
