Feat: 사용자의 채팅 참여 여부에 따라 SSE 연결 및 해제
 - 사용자가 채팅방에 입장했을 때 SSE 연결 해제
 - 사용자가 채팅방에서 퇴장했을 때 SSE 연결
 - header, footer 병합
 - 모든 html 파일(login, signup 제외)에 sse_connect.js 추가
 - chat.html에서만 입퇴장 여부에 따라 트리거 발생시킴

--- a/src/main/resources/templates/bungaeForm.html
+++ b/src/main/resources/templates/bungaeForm.html
@@ -5,6 +5,7 @@
     <title>createBungae</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bungae.css}">
     <script th:src="@{/js/bungae_create.js}" type="text/javascript"></script>
+    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
