--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -27,6 +27,7 @@
             });
         });
     </script>
+    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
 </head>
 <body>
 <h1>번개 리스트</h1>
