--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -7,25 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/chatting.css">
   <link rel="stylesheet" th:href="@{/css/chatting_css.css}">
+  <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+
 </head>
+<div th:replace="~{layout/header :: header}"></div>
 
 <body style="">
-<nav class="navbar navbar-expand-md bg-primary navbar-light border-bottom border-dark" style="	height: 80px;">
-  <div class="container"> <a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar16">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse" id="navbar16">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="main">홈</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="map">지도</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="bungae_create">번개생성</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="bungae_list">번개목록</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="bungae_ing">참여목록</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="profile">프로필</a> </li>
-      </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
-    </div>
-  </div>
-</nav>
 
   <div class="pt-3">
     <div class="container" style="	width: 600px;">
@@ -49,7 +36,7 @@
   </div>
 </div>
 <div id="errorMessage" style="color: red;"></div>
-
+<div id="messagess"></div>
 <div class="container">
   <div class="row justify-content-center mb-3">
     <div class="col-md-8">
@@ -62,7 +49,7 @@
     <div class="col-md-8">
       <form onsubmit="return sendMessage()" class="form-inline justify-content-center">
         <input type="text" id="message" autocomplete="off" class="form-control form-control-lg mr-2" placeholder="내용을 입력하세요." style="flex-grow: 1;">
-        <button class="btn btn-primary" type="submit">전송</button>
+        <button id="sendButton" class="btn btn-primary" type="submit">전송</button>
       </form>
     </div>
   </div>
@@ -84,40 +71,27 @@
   </div>
 </div>
 
-<div class="py-3 border-top border-dark">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></div>
-      <div class="col-md-6 text-center d-md-flex align-items-center">
-        <ul class="nav mx-md-auto d-flex justify-content-center">
-          <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-        </ul>
-        <div class="row">
-          <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"> <a href="#">
-            <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-          </a> <a href="#">
-            <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-          </a> <a href="#">
-            <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-          </a> </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
-      </div>
-    </div>
-  </div>
-</div>
+  <script>
+    // 페이지가 로드될 때 enterChat 이벤트를 트리거
+    window.addEventListener('DOMContentLoaded', function () {
+      const enterEvent = new Event('enterChat');
+      window.dispatchEvent(enterEvent);
+    });
+
+    // 페이지를 벗어날 때 leaveChat 이벤트를 트리거
+    window.addEventListener('beforeunload', function () {
+      const leaveEvent = new Event('leaveChat');
+      window.dispatchEvent(leaveEvent);
+    });
+  </script>
+
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/chat.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <div th:replace="~{layout/footer :: footer}"></div>
+
 </body>
 
 </html>
