--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -5,13 +5,27 @@
 </head>
 <body>
 <footer>
-    <div class="bottom">
-        <br>
-        <img class="bottom-logo" src="/images/bungae.png">
-        <br><br>
-        <a href="https://github.com/SNGYNGJIN/bungae.git"><img class="github_icon" src="/images/github_icon.png"></a>
-        <a href="https://www.notion.so/About-Our-Project-e8a8dd04be0c43ac879fb59ab4beb4f0?pvs=4"><img class="notion_icon" src="/images/notion_icon.png"></a>
-        <p id="copy">Copyright 2024. CodeNinja INC. All rights reserved.</p>
+    <div class="py-3 border-top border-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30"
+                                                    class="d-inline-block align-top" alt=""></div>
+                <div class="col-md-6 text-center d-md-flex align-items-center">
+                    <ul class="nav mx-md-auto d-flex justify-content-center">
+                        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
+                </div>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
