--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,33 +8,14 @@
           type="text/css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script th:src="@{/js/logout.js}" type="text/javascript"></script>
     <script th:src="@{/js/main.js}" type="text/javascript"></script>
+    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
     <link rel="icon">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md bg-primary navbar-light border-bottom border-dark" style="	height: 80px;">
-    <div class="container"><a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30"
-                                                                 class="d-inline-block align-top" alt=""></a>
-        <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
-                data-target="#navbar16">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar16">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="main">홈</a></li>
-                <li class="nav-item"><a class="nav-link" href="map">지도</a></li>
-                <li class="nav-item"><a class="nav-link" href="bungae_create" th:href="@{bungae_create}">번개생성</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="bungae_list">번개목록</a></li>
-                <li class="nav-item"><a class="nav-link" href="bungae_ing">참여목록</a></li>
-                <li class="nav-item"><a class="nav-link" href="profile" th:href="@{profile}">프로필</a></li>
-            </ul>
-            <a id="loginLogoutButton" class="btn navbar-btn ml-md-2 btn-light text-dark" href="#">로그인<br></a>
-        </div>
-    </div>
-</nav>
+<div th:replace="~{layout/header :: header}"></div>
+
 <div class="border-dark">
     <div class="container">
         <div class="row">
@@ -88,27 +69,8 @@
         </div>
     </div>
 </div>
-<div class="py-3 border-top border-dark">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30"
-                                                class="d-inline-block align-top" alt=""></div>
-            <div class="col-md-6 text-center d-md-flex align-items-center">
-                <ul class="nav mx-md-auto d-flex justify-content-center">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
-            </div>
-        </div>
-    </div>
-</div>
+<div th:replace="~{layout/footer :: footer}"></div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
