Feat: 사용자의 활동이 감지되지 않을 때, 알림 추가
 - 4분마다 현재 연결 상태 전송 + 세션만료 시간 5분 : 움직임이 감지되지 않으면 사용자 오프라인 처리
 - 사용자가 오프라인일 때 알림을 보여주기 위한 디비 추가
 - 사용자가 알림창을 클릭하면 알림 읽음 처리
 - 전체 헤더, 푸터 통일
 - 전체 html에 sse 연결, 로그아웃 체크 스크립트 추가

--- a/src/main/resources/templates/bungaeForm.html
+++ b/src/main/resources/templates/bungaeForm.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/bungae.css}">
     <script th:src="@{/js/bungae_create.js}" type="text/javascript"></script>
     <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
