--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -28,6 +28,8 @@
         });
     </script>
     <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 <body>
 <h1>번개 리스트</h1>
