--- a/src/main/resources/templates/bungae_create.html
+++ b/src/main/resources/templates/bungae_create.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
     <link rel="stylesheet" href="/css/bungae_create.css">
     <script th:src="@{/js/bungae_create.js}" type="text/javascript"></script>
-    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -85,9 +88,7 @@
 </div>
 <div th:replace="~{layout/footer :: footer}"></div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
