--- a/src/main/resources/templates/bungae_detail.html
+++ b/src/main/resources/templates/bungae_detail.html
@@ -8,6 +8,8 @@
           type="text/css">
     <link rel="stylesheet" href="/css/bungae_detail.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 
 <body>
