--- a/src/main/resources/templates/bungae_ing.html
+++ b/src/main/resources/templates/bungae_ing.html
@@ -10,6 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:src="@{/js/bungae_ing.js}" type="text/javascript"></script>
     <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 
 <body>
