--- a/src/main/resources/templates/bungae_list.html
+++ b/src/main/resources/templates/bungae_list.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-          type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/chatting.css">
+    <link rel="stylesheet" th:href="@{/css/chatting_css.css}">
+    <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
     <link rel="stylesheet" href="/css/bungae_list.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:src="@{/js/bungae_list.js}" type="text/javascript"></script>
     <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 
 <body>
