--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/chatting.css">
   <link rel="stylesheet" th:href="@{/css/chatting_css.css}">
   <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
-
+  <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+  <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 <div th:replace="~{layout/header :: header}"></div>
 
@@ -87,7 +89,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/chat.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <div th:replace="~{layout/footer :: footer}"></div>
