--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -11,6 +11,8 @@
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:src="@{/js/map.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+    <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
     <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
 </head>
 
