--- a/src/main/resources/templates/profile_edit.html
+++ b/src/main/resources/templates/profile_edit.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="/css/profile_edit.css">
   <script th:src="@{/js/editProfile.js}" ></script>
   <script th:src="@{/js/sse_connect.js}" type="text/javascript"></script>
+  <script th:src="@{/js/offline.js}" type="text/javascript"></script>
+  <script th:src="@{/js/offline_check.js}" type="text/javascript"></script>
 </head>
 
 <body>
