지도영역 변경에 따라 모임리스트 변경

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -49,9 +49,7 @@
                         </div>
                     </div>
                 </form>
-                <div class="list-group" id="bungae-list">
-
-                </div>
+                <div class="list-group" id="bungae-list"></div>
             </div>
             <div class="col-md-8 d-flex flex-row justify-content-end align-items-center" id="map"
                  style="height: 600px;">
